[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.ExamplePackage"
version = "0.0.1"
description = "An example docassemble package and repository."
readme = "README.md"
authors = [
    { name = "", email = "52798256+plocket@users.noreply.github.com." },
]
dependencies = []
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
